[gd_scene load_steps=9 format=3 uid="uid://jl2h7au7oyrx"]

[ext_resource type="Script" path="res://Scenes/fight_scene.gd" id="1_8cfpl"]
[ext_resource type="PackedScene" uid="uid://bb70r86kokvep" path="res://Interface/Arena/arena_console.tscn" id="1_pxlbh"]
[ext_resource type="PackedScene" uid="uid://xlxt7ab2rjil" path="res://Interface/Arena/arena_sidebar.tscn" id="2_8tgm1"]
[ext_resource type="PackedScene" uid="uid://skumunjuxf6w" path="res://Interface/Arena/fight_end_window.tscn" id="3_ldxb3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7ox04"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_rmpla"]
sky_material = SubResource("ProceduralSkyMaterial_7ox04")

[sub_resource type="Environment" id="Environment_781vr"]
background_mode = 2
sky = SubResource("Sky_rmpla")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lw07f"]
albedo_color = Color(0.25098, 0.501961, 0, 1)

[node name="FightScene" type="Node3D"]
script = ExtResource("1_8cfpl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_781vr")

[node name="MapObject" type="Node3D" parent="."]

[node name="Terrain" type="CSGBox3D" parent="MapObject"]
size = Vector3(60, 1, 60)
material = SubResource("StandardMaterial3D_lw07f")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 16, 20)

[node name="ArenaConsole" parent="." instance=ExtResource("1_pxlbh")]

[node name="ArenaSidebar" parent="." instance=ExtResource("2_8tgm1")]

[node name="FightEndWindow" parent="." instance=ExtResource("3_ldxb3")]
